--- a/public/500.html
+++ b/public/500.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-  }
+  <head>
+    <title>We're sorry, but something went wrong (500)</title>
+    <style>
+      html {
+        background-color: #739bb8;
+        background-image: linear-gradient(#739bb8 0px, #92bcd9 100%);
+        background-repeat: repeat-x;
+        height: 100%;
+      }
 
-  div.dialog {
-    width: 25em;
-    margin: 4em auto 0 auto;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 4em 0 4em;
-  }
+      body {
+        color: #2E2F30;
+        text-align: center;
+        font-family: arial, sans-serif;
+        margin-top: 150px;
+      }
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+      div.dialog {
+        width: 100%;
+        margin: 0 auto 0 auto;
+      }
 
-  body > p {
-    width: 33em;
-    margin: 0 auto 1em;
-    padding: 1em 0;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
+      h1 {
+        font-size: 28px;
+        color: whitesmoke;
+        line-height: 1.5em;
+      }
+    </style>
+  </head>
 
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-  </div>
-  <p>If you are the application owner check the logs for more information.</p>
-</body>
+  <body>
+    <div>
+      <svg width="500px" height="200px" viewBox="0 0 1697 513" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <title>Skyderby logo</title>
+        <desc>Created with Sketch.</desc>
+        <defs></defs>
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+          <g id="Skyderby-logo" sketch:type="MSArtboardGroup" fill="#f5f5f5">
+            <text id="SKYDERBY" sketch:type="MSTextLayer" font-family="Copperplate" font-size="230" font-weight="normal">
+              <tspan x="411" y="306">SKYDERBY</tspan>
+            </text>
+            <g id="Flyers" sketch:type="MSLayerGroup" transform="translate(30.000000, 127.000000)">
+              <path d="M162.587,114.168 L255.14,137.701 C254.322,134.215 254.792,130.329 256.751,126.728 C258.954,122.675 262.622,119.755 266.74,118.337 C270.683,116.979 275.039,116.999 278.917,118.719 C286.843,122.228 289.764,131.509 285.454,139.451 C283.248,143.504 279.576,146.424 275.458,147.841 C274.132,148.298 272.76,148.599 271.376,148.732 L328.337,213.145 C293.804,192.157 272.346,187.801 259.023,192.389 C243.299,197.803 238.905,215.673 237.72,233.36 C236.069,258.015 240.392,294.641 240.619,296.569 C239.657,294.549 221.384,256.167 187.95,234.629 C150.077,210.23 102.892,207.54 100.409,207.399 C102.445,207.17 141.13,202.823 178.867,190.372 C180.142,189.951 181.431,189.521 182.717,189.078 C208.775,180.106 234.45,165.844 162.587,114.168 L162.587,114.168 Z" id="Shape" sketch:type="MSShapeGroup"></path>
+              <path d="M62.587,0.168 L155.14,23.701 C154.322,20.215 154.792,16.329 156.751,12.728 C158.954,8.675 162.622,5.755 166.74,4.337 C170.683,2.979 175.039,2.999 178.917,4.719 C186.843,8.228 189.764,17.509 185.454,25.451 C183.248,29.504 179.576,32.424 175.458,33.841 C174.132,34.298 172.76,34.599 171.376,34.732 L228.337,99.145 C193.804,78.157 172.346,73.801 159.023,78.389 C143.299,83.803 138.905,101.673 137.72,119.36 C136.069,144.015 140.392,180.641 140.619,182.569 C139.657,180.549 121.384,142.167 87.95,120.629 C50.077,96.23 2.892,93.54 0.409,93.399 C2.445,93.17 41.13,88.823 78.867,76.372 C80.142,75.951 81.431,75.521 82.717,75.078 C108.775,66.106 134.45,51.844 62.587,0.168 L62.587,0.168 Z" id="Shape" sketch:type="MSShapeGroup"></path>
+            </g>
+          </g>
+        </g>
+      </svg>
+    </div>
+
+    <div class="dialog">
+      <h1>#500 We're sorry, but something went wrong.</h1>
+    </div>
+  </body>
 </html>
